Fix font-size on small elements

--- a/src/resources/sass/app.scss
+++ b/src/resources/sass/app.scss
@@ -270,3 +270,7 @@ table {
 .table thead th {
     border: 0;
 }
+
+small {
+    font-size: 0.875em;
+}
